--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Farmilify">
-        <activity
-            android:name=".Login"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.Farmilify.NoActionBar"></activity>
+
         <activity android:name=".Landing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,15 +19,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--
- <activity
+
+        <activity
+            android:name=".Login"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.Farmilify.NoActionBar"></activity>
+
+        <activity
+            android:name=".Register"
+            android:label="Register"
+            android:theme="@style/Theme.Farmilify.NoActionBar"></activity>
+
+        <activity
             android:name=".Dashboard"
             android:label="@string/title_activity_dashboard"
             android:theme="@style/Theme.Farmilify.NoActionBar"></activity>
-        -->
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
+
     </application>
 
 </manifest>
