--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.Farmilify">
 
         <activity android:name=".Landing">
@@ -28,8 +29,7 @@
 
         <activity
             android:name=".RegisterActivity"
-            android:label="Register"
-            android:theme="@style/Theme.Farmilify.NoActionBar"></activity>
+            android:label="Register"></activity>
 
         <activity
             android:name=".Dashboard"
